--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ppl-final-assignment",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/nprogress": "^0.2.0",
+    "@types/react-google-recaptcha": "^2.1.5",
+    "bcrypt": "^5.0.1",
+    "bootstrap-icons": "^1.8.3",
+    "contentful": "^9.1.29",
+    "http-status-codes": "^2.2.0",
+    "next": "^12.1.6",
+    "nprogress": "^0.2.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-markdown": "^8.0.3",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
-    "@types/node": "17.0.36",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.2"
+    "@svgr/webpack": "^6.2.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "@types/sqlite3": "^3.1.8",
+    "autoprefixer": "^10.4.7",
+    "contentful-typescript-codegen": "^3.2.3",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.7.2"
+  },
+  "next-unused": {
+    "include": ["src"],
+    "entrypoints": ["src/pages"]
   }
 }
